<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_margin">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="@dimen/icon_medium"
        android:layout_height="@dimen/icon_medium"
        android:layout_gravity="center"
        android:contentDescription="@string/task_icon"
        android:paddingTop="@dimen/small_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_name_your_list"
        app:layout_constraintEnd_toStartOf="@id/space_start"
        app:layout_constraintBottom_toBottomOf="@id/tv_name_your_list"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/tv_name_your_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name_your_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingTop="@dimen/small_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/space_start"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_list_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:hint="@string/list_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_your_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_check_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_list"
        android:layout_marginVertical="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_list_name" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_public"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/public_question_mark"
        app:layout_constraintStart_toEndOf="@id/cb_check_list"
        app:layout_constraintEnd_toStartOf="@+id/iv_info"
        app:layout_constraintTop_toTopOf="@+id/cb_check_list" />

    <ImageView
        android:id="@+id/iv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/public_question_mark"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintStart_toEndOf="@id/switch_public"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cb_check_list"
        app:layout_constraintBottom_toBottomOf="@+id/cb_check_list"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/default_margin"
        android:paddingHorizontal="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/iv_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/windowBackground" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/ok"
            android:textColor="@color/windowBackground" />
    </LinearLayout>

    <Space
        android:id="@+id/space_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
