<!-- note_detail_fragment.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- Icono para el título -->
    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="@dimen/default_margin"
        android:contentDescription="@string/task_title"
        android:src="@drawable/ic_title"
        app:layout_constraintBottom_toBottomOf="@id/et_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_title" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sides_margin_big"
        android:hint="@string/task_title"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_title"
        app:layout_constraintTop_toTopOf="@id/guide_20" />

    <!-- Icono para el contenido -->
    <ImageView
        android:id="@+id/iv_content"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:contentDescription="@string/add_extra_content"
        android:src="@drawable/ic_content"
        app:layout_constraintBottom_toBottomOf="@+id/et_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_content" />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:hint="@string/add_content"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="3"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="@id/et_title"
        app:layout_constraintStart_toStartOf="@+id/et_title"
        app:layout_constraintTop_toBottomOf="@+id/et_title" />


    <!-- Icono para el start_time -->
    <ImageView
        android:id="@+id/iv_start_time"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:src="@drawable/ic_time"
        android:contentDescription="@string/select_time"
        app:layout_constraintBottom_toBottomOf="@+id/tv_start_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_start_time" />

    <TextView
        android:id="@+id/tv_start_time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textSize="21sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/et_title"
        app:layout_constraintStart_toStartOf="@id/et_title"
        app:layout_constraintTop_toBottomOf="@+id/et_content"
        tools:text="09/08/2023 23:00" />

    <Button
        android:id="@+id/btn_update"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_start_time" />

    <Button
        android:id="@+id/btn_delete"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_update"
        app:layout_constraintTop_toTopOf="@id/btn_update" />

    <!-- Guía para el 20% de la altura de la pantalla -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />


</androidx.constraintlayout.widget.ConstraintLayout>
